Cleaning up the 462 folder with all of the code from my final project

--- a/462/Final_Project/MSDS_462_Project.ipynb
+++ b/462/Final_Project/MSDS_462_Project.ipynb
@@ -605,9 +605,9 @@
    "id": "4f5cc7d6",
    "metadata": {},
    "source": [
-    "## Code to run on the Raspberry Pi\n",
+    "## Scratch space\n",
     "\n",
-    "This is the only way I've thought of to be able to publish the code in one place"
+    "To delete tensors that are taking up too much memory etc"
    ]
   },
   {
@@ -617,44 +617,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "del(train_gen)\n",
+    "del(test_gen)\n",
     "\n",
-    "from subprocess import run\n",
-    "from PIL import Image as PIL_Img\n",
-    "import tflite_runtime.interpreter as tflite\n",
-    "from datetime import datetime as dt\n",
-    "import numpy as np\n",
-    "\n",
-    "# this will capture an image using the libcamera library every 1 second (minimum I could get it to do)\n",
-    "# I then read that jpg in, use PIL to convert it into a correctly sized numpy array, then predict using\n",
-    "# the loaded model\n",
-    "\n",
-    "# for info on all of this, look through the documentation on the tensorflow website:\n",
-    "# \n",
-    "# Loading the model: tensorflow.org/lite/guide/python\n",
-    "# Running in python: tensorflow.org/lite/guide/inference#load_and_run_a_model_in_python\n",
-    "\n",
-    "\n",
-    "\n",
-    "linesplit = '---------------------------------------'\n",
-    "interpreter = tflite.Interpreter(model_path='/home/pi/cat_tagger_model.tflite')\n",
-    "my_signature = interpreter.get_signature_runner()\n",
-    "\n",
-    "while True:\n",
-    "    image_name = f\"cat_jpgs/detect{dt.now().strftime('%Y%m%d_%H:%M:%S')}.jpg\" # can change if we want\n",
-    "    run(['libcamera-jpeg','-n','-v','0','--immediate','--timelapse=1','-o',image_name])\n",
-    "    img = PIL_Img.open(image_name).convert('RGB').resize((224,224)) # pull in the image -- resize properly etc\n",
-    "    ary = np.expand_dims(np.asarray(img), axis=0).astype(np.float32) # # convert to a numpy array\n",
-    "    \n",
-    "    print(linesplit)\n",
-    "    output = my_signature(input_1=ary) # make the prediction\n",
-    "    probs = output['dense_1'][0,0]\n",
-    "    print(probs)\n",
-    "\n",
-    "    del(img)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "del(test_im)\n",
+    "del(test_lab)\n",
+    "del(train_im)\n",
+    "del(train_lab)"
    ]
   }
  ],
